fix(DataMapper): Add vertical scrolling when panels overflow container (#2915)
Fixes: https://github.com/KaotoIO/kaoto/issues/2915

- Too many parameters causes the panels overflow the viewport and the Source Body becomes inaccessible. Enable whole-source-panel scrollbar for the case
- Individual parameter and Source Body get it's own scrollbar (nested)
- Adjust line drawing to accommodate nested scroll

--- a/packages/ui/src/components/ExpansionPanels/ExpansionPanels.scss
+++ b/packages/ui/src/components/ExpansionPanels/ExpansionPanels.scss
@@ -4,7 +4,7 @@
   position: relative;
   width: 100%;
   height: 100%;
-  overflow: hidden;
+  overflow: hidden auto;
   display: grid;
   grid-template-rows: var(--grid-template, 1fr);
   transition: grid-template-rows var(--expansion-panel-animation);
