--- a/packages/ui/src/components/View/SourcePanel.scss
+++ b/packages/ui/src/components/View/SourcePanel.scss
@@ -1,5 +1,6 @@
 .source-panel {
   position: relative;
-  overflow: auto;
-  height: 100%;
+  overflow: hidden;
+  flex: 1 1 0;
+  min-height: 0;
 }
